2006-11-21  Sven Schuetz
	* sfcbrepos.sh.in, Makefile.am, interop.mof, indication.mof, README
	Fixed 1599697: sfcbrepos include default mofs

2006-11-17  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* sfcBroker.c: 
	Fixed 1598227: Use the SIGQUIT handler for SIGTERM as well in order to
	clean up the child processes.

2006-11-09  Sven Schuetz
	* cimXmlGen.c, cimXmlRequest.c, objectImpl.c:
	Fixed 1593220: bug in setQualifier

2006-11-08  Sven Schuetz
	* cimXmlOps.y, cimXmlParser.c:
	Fixed 1592760: sfcb PROPERTY.ARRAY creation fails

2006-11-07  Sven Schuetz
	* objectImpl.h, objectImplSwapI32toP32.c, instance.c,
	qualifier.c:
	Fixed 1587752: objectImplSwapI32toP32.c needs to be extended
	
	* objectImpl.c:
	Fixed 1592037: objectImpl Array creation
	

2006-10-27  Sven Schuetz

	* Makefile.am, sfcbrepos.sh.in, fileRepository.h, fileRepository.c, 
	internalProvider.c,
	Fixed 1578815: create fileRepository shared library

2006-10-25  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* Makefile.am, classSchema2c.c, classProviderMem.c, classSchemaMem.c,
	classSchemaMem.h: 
	Fixed 1532425: Reenabled classSchema2c and went all the way and added
	an in-memory class provider.

2006-10-20  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* dbpAdapter.c, sqlStatement.c: 
	Fixed 1581214: compile problems.

	* cimXmlRequest.c, constClass.c: 
	Update for 1443864: use free instead of release to get rid of resultdata
	arrays without causing a coredump.

2006-10-16  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* brokerUpc.c, msgqueue.c, providerDrv.c, providerMgr.c: 
	Fixed 1578051: race condition in provider initialization code.
	Further, hardened client (e.g. invokeProvider) code.

2006-10-06	Sven Schuetz

	* cimXmlRequest.c, qualifierProvider.c, providerMgr.c, providerDrv.c,
	Makefile.am, configure.ac, README, cimXmlGen.c
	Implemented 1569239: make qualifier provider configurable

