@@ -1,3 +1,9 @@
+2006-11-21  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
+
+	* providerDrv.c, providerMgr.c, configure.ac, README: 
+	Fixed 1193881: added new configuration option to specify the enumeration
+	behavior. In both cases, the correct number of instances is returned now.
+
 2006-11-21  Sven Schuetz
 	* sfcbrepos.sh.in, Makefile.am, interop.mof, indication.mof, README
 	Fixed 1599697: sfcbrepos include default mofs
